# cmake-fexamples

./: .gitignore  README.rst
blas/: CMakeLists.txt  detect_blas.f90  eigsolve.f90
fcconfig/: CMakeLists.txt
modules/: CMakeLists.txt
modules_in_subdir/: CMakeLists.txt  test_kind.f90
modules_in_subdir/submodules/: CMakeLists.txt  mykind.f90
single-file/: CMakeLists.txt  build.sh  test_kind.f90
